# datashield-opal-python

./: Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
datashield_opal/: __init__.py  impl.py
examples/: datashield.py.ipynb
tests/: test_api_admin.py  test_api_analysis.py  test_datashield.py  test_impl.py
