[project]
name = "datashield-opal"
version = "1.0.0"
description = ""
authors = [
    {name = "Yannick Marcon", email = "yannick.marcon@obiba.org"}
]
maintainers = [
    {name = "Yannick Marcon", email = "yannick.marcon@obiba.org"}
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["datashield", "data", "obiba", "opal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "datashield @ git+https://github.com/datashield/datashield-python.git@master",
    "obiba_opal @ git+https://github.com/obiba/opal-python-client.git@master"
]

[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
]
dev = [
    "ruff>=0.10.0",
]

[project.urls]
Homepage = "https://www.datashield.org"
Repository = "https://github.com/datashield/datashield-opal-python"
Documentation = "https://datashield.github.io/datashield-opal-python"
"Bug Tracker" = "https://github.com/datashield/datashield-opal-python/issues"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datashield_opal"]
